@@ -20,6 +20,9 @@
 #ifndef MBOOSTER_H
 #define MBOOSTER_H
 
+#include <QApplication>
+#include "QFileInfo"
+
 #include "eventhandler.h"
 #include "booster.h"
 
@@ -76,6 +79,9 @@ protected:
 
     //! \reimp
     virtual bool receiveDataFromInvoker(int socketFd);
+
+    //! \reimp
+    virtual void preinit();
 
 private:
 
