@@ -129,16 +129,6 @@ QApplication* MDeclarativeCachePrivate::qApplication(int &argc, char **argv)
         if (loadTestabilityEnv || loadTestabilityArg)
             testabilityInit();
 
-        QString appClass = appName.left(1).toUpper();
-        if (appName.length() > 1)
-            appClass += appName.right(appName.length() - 1);
-
-        char* app_name = qstrdup(appName.toLatin1().data());
-        QApplication::setAppName(app_name);
-
-        char* app_class = qstrdup(appClass.toLatin1().data());
-        QApplication::setAppClass(app_class);
-
 #ifdef Q_WS_X11
         // reinit WM_COMMAND X11 property
         if (qDeclarativeViewInstance) 
