@@ -94,3 +94,19 @@ bool QDeclarativeBooster::receiveDataFromInvoker(int socketFd)
         return true;
     }
 }
+
+
+void QDeclarativeBooster::preinit()
+{
+    QString appName = QFileInfo(m_appData->argv()[0]).fileName();
+
+    QString appClass = appName.left(1).toUpper();
+    if (appName.length() > 1)
+        appClass += appName.right(appName.length() - 1);
+
+    char* app_name = qstrdup(appName.toLatin1().data());
+    QApplication::setAppName(app_name);
+
+    char* app_class = qstrdup(appClass.toLatin1().data());
+    QApplication::setAppClass(app_class);
+}
